# sdrs-cloth

./: .gitignore  .gitmodules  CMakeLists.txt  SkirtDatasetCommon.h  commit.sh  install.bat
ADMM/: ADMM.cpp  ADMM.h  ADMMUAVTrajectory.cpp  ADMMUAVTrajectory.h  ARAP.cpp  ARAP.h  CollisionDetector.cpp  CollisionDetector.h  CollisionMatrix.cpp  CollisionMatrix.h  CollisionObstacle.cpp  CollisionObstacle.h  CollisionSelf.cpp  CollisionSelf.h  Deformable.cpp  Deformable.h  DeformableVisualizer.h  DirectNewton.cpp  DirectNewton.h  GradientDescend.cpp  GradientDescend.h  LM.cpp  LM.h  MassSpring.cpp  MassSpring.h  Narrow.h  Newton.cpp  Newton.h  Optimizer.cpp  Optimizer.h  OptimizerTerm.cpp  OptimizerTerm.h  SmallScaleNewton.h  SmallShape.h  SmoothL1.cpp  SmoothL1.h  SpatialHash.cpp  SpatialHash.h
Articulated/: ArticulatedBody.cpp  ArticulatedBody.h  ArticulatedLoader.cpp  ArticulatedLoader.h  ArticulatedUtils.cpp  ArticulatedUtils.h  ArticulatedVisualizer.cpp  ArticulatedVisualizer.h  Joint.cpp  Joint.h  JointFunc.cpp  JointFunc.h  LeviCivita.h  NEArticulatedGradientInfo.cpp  NEArticulatedGradientInfo.h  PBCentroidBodyDynamicsGradientInfo.cpp  PBCentroidBodyDynamicsGradientInfo.h  PBDArticulatedGradientInfo.cpp  PBDArticulatedGradientInfo.h  RigidBodyMass.cpp  RigidBodyMass.h  TensorContractPragma.h
ConvexHull/: Barrier.h  CollisionGradInfo.cpp  CollisionGradInfo.h  ConvexHullDistanceConvexEnergy.cpp  ConvexHullDistanceConvexEnergy.h  ConvexHullDistanceEnergy.cpp  ConvexHullDistanceEnergy.h  ConvexHullDistanceFrictionEnergy.cpp  ConvexHullDistanceFrictionEnergy.h  ConvexHullMeshDistanceEnergy.cpp  ConvexHullMeshDistanceEnergy.h  ConvexHullMeshDistanceFrictionEnergy.cpp  ConvexHullMeshDistanceFrictionEnergy.h  CustomPBDEnergy.cpp  CustomPBDEnergy.h  DistanceEnergy.cpp  DistanceEnergy.h  GJKPolytope.cpp  GJKPolytope.h
Environment/: BBoxExact.cpp  BBoxExact.h  BVHNode.cpp  BVHNode.h  BaryDerivativeFunction.cpp  BaryDerivativeFunction.h  CompositeShapeExact.cpp  CompositeShapeExact.h  ContactGenerator.cpp  ContactGenerator.h  ConvexDecomposition.cpp  ConvexDecomposition.h  ConvexHullExact.cpp  ConvexHullExact.h  DeformedEnvironment.cpp  DeformedEnvironment.h  DistanceFunction.cpp  DistanceFunction.h  EdgeExact.cpp  EdgeExact.h  Environment.cpp  Environment.h  EnvironmentUtils.cpp  EnvironmentUtils.h  EnvironmentUtilsCGAL.cpp  EnvironmentVisualizer.cpp  EnvironmentVisualizer.h  GJK.cpp  GJK.h  MeshExact.cpp  MeshExact.h  PointCloudExact.cpp  PointCloudExact.h  SAT.cpp  SAT.h  ShapeExact.cpp  ShapeExact.h  SphericalBBoxExact.cpp  SphericalBBoxExact.h  TriangleExact.cpp  (+2 more)
Main/DebugADMM/: HSV2RGB.h  mainARAP2D.cpp  mainARAP2DBetaProfile.cpp  mainARAP2DDrag.cpp  mainARAP2DFinger.cpp  mainARAP3D.cpp  mainARAP3DDrag.cpp  mainARAP3DFinger.cpp  mainARAP3DProfile.cpp  mainDebugARAP.cpp  mainDebugCollision.cpp  mainDebugCollisionDetection.cpp  mainDebugL1.cpp  mainDebugMassSpring.cpp  mainDebugSpatialHash.cpp  mainDebugTet.cpp  mainDebugUAV.cpp  mainGJK.cpp  mainMassSpring2D.cpp  mainMassSpring2DLong.cpp  mainMassSpring2DLongBetaProfile.cpp  mainMassSpring2DSelf.cpp  mainMassSpring3D.cpp  mainMassSpring3DLong.cpp  mainMassSpring3DLongMoreIter.cpp  mainMassSpring3DLongProfile.cpp  mainMassSpring3DPin.cpp  mainMassSpring3DSelf.cpp  mainMassSpring3DSkirt.cpp  mainMassSpring3DSkirtNoCollision.cpp  mainNavigation.cpp  mainNavigationProfile.cpp  mainUAV.cpp  mainUAVProfile.cpp
Main/DebugSimulator/: mainGJK.cpp
SIPCollision/: BezierCurve.cpp  BezierCurve.h  SmoothnessEnergy.cpp  SmoothnessEnergy.h  ThetaTrajectory.cpp  ThetaTrajectory.h  TrajectorySIPEnergy.cpp  TrajectorySIPEnergy.h
Utils/: CrossSpatialUtils.h  DebugGradient.h  Epsilon.cpp  Epsilon.h  Heap.h  IO.cpp  IO.h  Interp.h  ParallelVector.h  Pragma.h  RotationUtils.h  SOSPolynomial.cpp  SOSPolynomial.h  Serializable.cpp  Serializable.h  SparseUtils.h  SparseVisualizer.h  SpatialRotationUtils.h  Timing.cpp  Timing.h  Utils.cpp  Utils.h  VTKWriter.cpp  VTKWriter.h  Zero.h
Utils/internal/: SOSPolynomialAffineTransXId.h  SOSPolynomialContract.h  SOSPolynomialConvert.h  SOSPolynomialEvaluate.h  SOSPolynomialIsZero.h  SOSPolynomialLexer.h  SOSPolynomialNrVar.h  SOSPolynomialRearrange.h  SOSPolynomialRobustInversion.h  SOSPolynomialScalarOfT.h  SOSPolynomialSolve.h
cmake/: FindCoinHSL.cmake  FindGurobi.cmake  FindIpopt.cmake  FindKnitro.cmake  FindOMPL.cmake  FindTINYXML2.cmake  LoadLibs.cmake
